--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
     "xtask",
     "yru-chorus-rs-mono",
     "yru-chorus-rs-stereo",
-    "yru-flanger-rs",
+    "yru-flanger-rs-mono",
     "yru-flanger-stereo-rs",
     "yru-echo-rs",
 ]
