--- a/yru-flanger-rs-stereo/Cargo.toml
+++ b/yru-flanger-rs-stereo/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "yru-flanger-stereo-rs"
+name = "yru-flanger-rs-stereo"
 version = "0.1.0"
 authors = ["Yruama_Lairba <yruama_lairba@hotmail.com>"]
 edition = "2018"
