--- a/yru-echo-rs-mono/Cargo.toml
+++ b/yru-echo-rs-mono/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "yru-echo-rs"
+name = "yru-echo-rs-mono"
 version = "0.1.0"
 authors = ["Yruama_Lairba <yruama_lairba@hotmail.com>"]
 edition = "2018"
